fixing minutes scrollbar

--- a/state/supreme_court/style/court_1920.css
+++ b/state/supreme_court/style/court_1920.css
@@ -187,6 +187,15 @@ body {
   justify-content: space-around;
 }
 
+.minuteMainOuter {
+  border-right: 1px dashed black;
+  overflow-x: hidden;
+}
+
+.minuteMain {
+  width: calc(90% + 17px);
+}
+
 .barIntro {
   width: 45%;
 }
